# pico2vibe

./: CMakeLists.txt  CMakePresets.json  Novo Documento de Texto.txt  README.md  i2s_bidir_dma.pio  univibe_rp2350_dma.cpp
.github/workflows/: main.yml  web-pages.yml
desktop_tools/: CMakeLists.txt  README.md
desktop_tools/gui/: univibe_gui.py
desktop_tools/scripts/: extract_dsp.py
desktop_tools/src/: analysis_main.cpp  main.cpp  processor.cpp  processor.hpp  wav_io.cpp  wav_io.hpp
src/dsp/: vibe_core.hpp
web/public/: app.js  index.html  styles.css
web/wasm/: build_web.sh  vibe_wasm.cpp
web_sim/: README.md  app.js  index.html  styles.css
